fix: add colour to button text as it was showing blue on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,9 +107,10 @@ section {
   background-color: #F79326;
   border: 3px solid #171717;
   border-radius: 5px;
-  font-size: 1.7rem;
+  font-size: 1.5rem;
   font-family: 'New Rocker', cursive;
   letter-spacing: 4px;
+  color: #171717;
 }
 
 #questions-game {
